--- a/tv.html
+++ b/tv.html
@@ -128,6 +128,13 @@
         <a href="#" onclick="changeStream('https://thedaddy.to/embed/stream-810.php', this)">TV2 Sport</a>
         <a href="#" onclick="changeStream('https://thedaddy.to/embed/stream-808.php', this)">TV2 Sport X</a>
         <a href="#" onclick="changeStream('https://thedaddy.to/embed/stream-819.php', this)">TV3+</a>
+        <a href="#" onclick="changeStream('https://thedaddy.to/embed/stream-223.php', this)">TV3 Max</a>
+        <a href="#" onclick="changeStream('https://thedaddy.to/embed/stream-809.php', this)">TV3 Sport</a>
+        <a href="#" onclick="changeStream('https://thedaddy.to/embed/stream-803.php', this)">Kanal 4</a>
+        <a href="#" onclick="changeStream('https://thedaddy.to/embed/stream-804.php', this)">Kanal 5</a>
+        <a href="#" onclick="changeStream('https://thedaddy.to/embed/stream-800.php', this)">6'eren</a>
+        <a href="#" onclick="changeStream('https://thedaddy.to/embed/stream-805.php', this)">Kanal 9</a>
+        <a href="#" onclick="changeStream('https://thedaddy.to/embed/stream-806.php', this)">MTV</a>
     </div>
 
     <div class="navbar-second">
