--- a/tv.html
+++ b/tv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Livestreams</title>
+    <title>TV</title>
     <style>
         body {
             margin: 0;
@@ -57,8 +57,8 @@
 
         .fullscreen-button, .chromecast-button {
             margin-top: 10px;
-            padding: 4px 8px;
-            font-size: 10px;
+            padding: 8px 16px;
+            font-size: 14px;
             background-color: #444;
             color: white;
             border: none;
