--- a/tv.html
+++ b/tv.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Stream Channels</title>
+    <title>TV</title>
     <style>
         /* Reset default styles */
         body, h1, p {
