--- a/tv.html
+++ b/tv.html
@@ -142,7 +142,7 @@
 
         <!-- Dropdown for "Andet" -->
         <li class="dropdown" id="dropdownAndet">
-            <a href="#">Andet..</a>
+            <a href="#">USA..</a>
             <ul>
                 <li><a href="#" onclick="changeStream('https://thedaddy.to/embed/stream-340.php', this)">Animal Planet</a></li>
                 <li><a href="#" onclick="changeStream('https://thedaddy.to/embed/stream-310.php', this)">Comedy Central</a></li>
