--- a/tv.html
+++ b/tv.html
@@ -71,6 +71,19 @@
             border: none !important; /* Completely remove border */
             border-radius: 0; /* Ensure no rounded corners */
         }
+
+        /* Styling for the disclaimer text */
+        .disclaimer {
+            margin-top: 30px;
+            font-size: 14px;
+            color: #f5f5f5;
+            background-color: #333;
+            padding: 10px;
+            border-radius: 5px;
+            width: 90%;
+            margin-left: auto;
+            margin-right: auto;
+        }
     </style>
 </head>
 <body>
@@ -83,7 +96,7 @@
         <li><a href="#" onclick="changeStream('https://thedaddy.to/embed/stream-808.php', this)">TV2 Sport X</a></li>
         <li><a href="#" onclick="changeStream('https://thedaddy.to/embed/stream-819.php', this)">TV3+</a></li>
         <li><a href="#" onclick="changeStream('https://thedaddy.to/embed/stream-223.php', this)">TV3 Max</a></li>
-	<li><a href="#" onclick="changeStream('https://thedaddy.to/embed/stream-811.php', this)">TV3 See</a></li>
+        <li><a href="#" onclick="changeStream('https://thedaddy.to/embed/stream-811.php', this)">TV3 See</a></li>
         <li><a href="#" onclick="changeStream('https://thedaddy.to/embed/stream-809.php', this)">TV3 Sport</a></li>
         <li><a href="#" onclick="changeStream('https://thedaddy.to/embed/stream-803.php', this)">Kanal 4</a></li>
         <li><a href="#" onclick="changeStream('https://thedaddy.to/embed/stream-804.php', this)">Kanal 5</a></li>
@@ -94,6 +107,10 @@
 
     <div class="stream-container">
         <iframe id="streamViewer" src="https://thedaddy.to/embed/stream-801.php" allowfullscreen></iframe>
+    </div>
+
+    <div class="disclaimer">
+        <p>Links er taget fra DaddyLive så ingen garanti for at de fungerer.</p>
     </div>
 
     <script>
